
=== 1.8.7 (2018-05-17) ===
FIXED: missing padding for Base64 in futoin.types spec

=== 1.8.6 (2018-05-15) ===
FIXED: "items" and "regex" cache issue in diamond inheritance
NEW: more detailed SpecTools errors with type validation path

=== 1.8.5 (2018-05-12) ===
FIXED: to properly includes specs/ in package

=== 1.8.4 (2018-05-10) ===
CHANGED: upgraded webpack to v4
FIXED: Browser env WebSockets comm failure without event-emitter

=== 1.8.3 (2018-02-17) ===
CHANGED: Object.prototype is freezed only by SpecTools.secureObjectPrototype()

=== 1.8.2 (2018-02-17) ===
FIXED: CVE-2018-3721 mitigation with Object.freeze()

=== 1.8.1 (2018-01-15) ===
BREAKING CHANGE: bi-channel callbacks require futoin-executor v1.8.0+
FIXED: to correctly handle mix of message codecs in WebSockets

=== 1.8.0 (2018-01-15) ===
BREAKING CHANGE: raw download is Buffer instead of string now
NEW: more verbose spec constraints mismatch
NEW: 'data' type from FTN3 v1.9
NEW: 'BinaryData' type from FTN3 v1.9
NEW: FTN3.1 spec is available under specs/ folder now
NEW: fundamental MessageCoder feature to easily message coders
NEW: MessagePack and CBOR support for message coding

=== 1.7.7 (2018-01-12) ===
FIXED: to compare legacy HMAC with protection from timining attacks
CHANGED: moved futoin-asyncevent from peer to regular deps
NEW: added SpecTools.secureEquals()

=== 1.7.6 (2017-12-26) ===
FIXED: to use FTN15-compliant `futoin-asyncevent` instead of `event-emitter`
FIXED: improved browser/browser-lite globals consistency

=== 1.7.5 (2017-12-26) ===
NEW: fixed to assert AsyncSteps as first argument of NativeIface#call()/#.{member}()
    - aids newcomers with common mistakes

=== 1.7.4 (2017-12-17) ===
FIXED: to parse JSON spec only on 200 request status in browser
FIXED: completed ES6 conversion
CHANGED: to build dist/ folder from es5/ folder
CHANGED: not to include futoin-asyncsteps in dist/ build
NEW: added "error" emit on SpecTools JSON parse error
NEW: added ES5 transpiled modules under es5/ folder