@@ -91,7 +91,8 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
     onRegister( as, info ) {
         if ( ( info.creds_master || info.creds_hmac ) &&
             !SpecTools.checkHMAC ) {
-            as.error( FutoInError.InvokerError, "Master/HMAC is not supported in this environment yet" );
+            as.error( FutoInError.InvokerError,
+                "Master/HMAC is not supported in this environment yet" );
         }
 
         const iface_options = info.options;
@@ -116,7 +117,8 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
         const name = ctx.name;
 
         if ( !( name in info.funcs ) ) {
-            as.error( FutoInError.InvokerError, "Unknown interface function: " + name );
+            as.error( FutoInError.InvokerError,
+                `Unknown interface function: ${name}()` );
         }
 
         const finfo = info.funcs[ name ];
@@ -125,24 +127,26 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
         ctx.max_req_size = finfo._max_req_size;
 
         if ( ctx.upload_data && !finfo.rawupload ) {
-            as.error( FutoInError.InvokerError, "Raw upload is not allowed" );
+            as.error( FutoInError.InvokerError,
+                `Raw upload is not allowed: ${name}()` );
         }
 
         if ( !Object.keys( finfo.params ).length &&
              Object.keys( params ).length ) {
-            as.error( FutoInError.InvokerError, "No params are defined" );
+            as.error( FutoInError.InvokerError,
+                `No params are defined: ${name}()` );
         }
 
         // Check params
         for ( let k in params ) {
             if ( !finfo.params.hasOwnProperty( k ) ) {
-                as.error( FutoInError.InvokerError, "Unknown parameter: " + k );
+                as.error( FutoInError.InvokerError,
+                    `Unknown parameter: ${name}(${k})` );
             }
 
             if ( !SpecTools.checkParameterType( info, name, k, params[ k ] ) ) {
                 as.error( FutoInError.InvalidRequest,
-                    "Type mismatch for parameter: " + k +
-                          " (" + params[ k ] + ")" );
+                    `Type mismatch for parameter: ${name}(${k}) = ${params[ k ]}` );
             }
         }
 
@@ -150,7 +154,8 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
         for ( let k in finfo.params ) {
             if ( !params.hasOwnProperty( k ) &&
                   !finfo.params[ k ].hasOwnProperty( "default" ) ) {
-                as.error( FutoInError.InvokerError, "Missing parameter " + k );
+                as.error( FutoInError.InvokerError,
+                    `Missing parameter: ${name}(${k})` );
             }
         }
     }
@@ -196,7 +201,8 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
         // ---
         if ( info.creds !== null ) {
             if ( info.creds_master ) {
-                as.error( FutoInError.InvokerError, 'MasterService support is not implemented' );
+                as.error( FutoInError.InvokerError,
+                    'MasterService support is not implemented' );
 
                 ctx.signMessage = function( req ) {
                     void req;
@@ -223,7 +229,8 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
 
         // Check signature
         if ( info.creds_master ) {
-            as.error( FutoInError.InvokerError, 'MasterService support is not implemented' );
+            as.error( FutoInError.InvokerError,
+                'MasterService support is not implemented' );
             // TODO: check signature
         } else if ( info.creds_hmac ) {
             var rsp_sec;
@@ -231,14 +238,16 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
             try {
                 rsp_sec = new Buffer( rsp.sec, 'base64' );
             } catch ( e ) {
-                as.error( FutoInError.SecurityError, "Missing response HMAC" );
+                as.error( FutoInError.SecurityError,
+                    `Missing response HMAC: ${name}()` );
             }
 
             delete rsp.sec;
             const required_sec = SpecTools.genHMAC( as, info.options, rsp );
 
             if ( !SpecTools.checkHMAC( rsp_sec, required_sec ) ) {
-                as.error( FutoInError.SecurityError, "Response HMAC mismatch" );
+                as.error( FutoInError.SecurityError,
+                    `Response HMAC mismatch: ${name}()` );
             }
         }
 
@@ -251,13 +260,15 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
             ) {
                 as.error( e, rsp.edesc );
             } else {
-                as.error( FutoInError.InternalError, "Not expected exception from Executor" );
+                as.error( FutoInError.InternalError,
+                    `Not expected exception from Executor: ${name}()` );
             }
         }
 
         // Check raw result
         if ( func_info.rawresult ) {
-            as.error( FutoInError.InternalError, "Raw result is expected" );
+            as.error( FutoInError.InternalError,
+                `Raw result is expected: ${name}()` );
         }
 
         if ( info.creds === 'master' ) {
@@ -271,7 +282,8 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
         if ( typeof resvars === 'string' ) {
             // New feature since FTN3 1.7
             if ( !SpecTools.checkType( info, resvars, result ) ) {
-                as.error( FutoInError.InternalError, "Result type mismatch" );
+                as.error( FutoInError.InternalError,
+                    `Result type mismatch: ${name}()` );
             }
         } else {
             let rescount = Object.keys( resvars ).length;
@@ -285,7 +297,8 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
             }
 
             if ( rescount > 0 ) {
-                as.error( FutoInError.InternalError, "Missing result variables" );
+                as.error( FutoInError.InternalError,
+                    `Missing result variables: ${name}()` );
             }
         }
 
@@ -297,7 +310,8 @@ class AdvancedCCMImpl extends SimpleCCMImpl {
         if ( ctx.info.funcs[ ctx.name ].rawresult ) {
             as.success( rsp );
         } else {
-            as.error( FutoInError.InternalError, "Raw result is not expected" );
+            as.error( FutoInError.InternalError,
+                `Raw result is not expected: ${ctx.name}()` );
         }
     }
 }
