@@ -130,7 +130,8 @@ class SimpleCCMImpl {
 
     onRegister( as, info ) {
         if ( info.creds_master || info.creds_hmac ) {
-            as.error( FutoInError.InvokerError, "Master/HMAC is supported only in AdvancedCCM" );
+            as.error( FutoInError.InvokerError,
+                "Master/HMAC is supported only in AdvancedCCM" );
         }
 
         info.funcs = {};
