@@ -1,4 +1,7 @@
 
+=== (next) ===
+CHANGED: improved request and response message error reporting verbosity
+
 === 1.8.7 (2018-05-17) ===
 FIXED: missing padding for Base64 in futoin.types spec
 
